--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,61 @@
-body {
+main {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: rgb(160, 160, 160)
+}
+header{
+  background-color: aquamarine;
+  height: 90px;
+}
+.title{
+  text-align: center;
+}
+.head-nav{
+  display: flex;
+  justify-content: center;
+}
+.head-links{
+  margin: 0 5px;
+}
+.jotpad{
+  padding: 10px;
+}
+.jot{
+  color: white;
+  text-align: center;
+}
+textarea{
+  width: 100%;
+	height: 600px;
+  padding: 5px;
+  resize: none;
+}
+.pad{
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+  .pad{
+    width: 75%;
+    margin: 0 auto;
+  }
+}
+.jot-del{
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+  text-align: center;
+  box-shadow: none;
+  border: solid 1px black;
+  display:inline-block;
+}
+.navbar-item{
+  display:inline-block;
+  width:150px;
+}
+.nav-link{
+  display: inline;
+  padding: 2px 2px;
 }
