--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+
 main {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: rgb(160, 160, 160)
+  height: 650px;
+  background: rgb(160, 160, 160);
 }
 header{
   background-color: aquamarine;
@@ -27,35 +29,106 @@ header{
 }
 textarea{
   width: 100%;
-	height: 600px;
+	height: 500px;
   padding: 5px;
   resize: none;
+  background-color: rgb(247, 237, 181);
 }
 .pad{
   width: 100%;
   margin: 0 auto;
 }
-
-@media (min-width: 992px) {
-  .pad{
-    width: 75%;
-    margin: 0 auto;
-  }
+#navbarCollapse{
+  position: fixed;
+  top: 150px;
+  z-index: 1000;
+  background: rgba(223, 223, 223, 0.9);
+  margin: -6px;
+  padding: 5px;
+}
+.sign-up{
+  display: block;
+  margin: 5px;
+  margin-left: 100px;
 }
 .jot-del{
   border-radius: 50%;
   height: 32px;
   width: 32px;
+  font-weight: 700;
   text-align: center;
   box-shadow: none;
   border: solid 1px black;
   display:inline-block;
 }
 .navbar-item{
-  display:inline-block;
+  display: block;
   width:150px;
 }
 .nav-link{
   display: inline;
-  padding: 2px 2px;
+  color: black;
+}
+.navbar{
+  float: left;
+  z-index: 1000;
+  background: rgb(160, 160, 160);
+  position: fixed;
+  margin: 0;
+}
+.new-jot{
+  width: 150px;
+  margin-top: 15px;
+}
+.new-jot input{
+  width: 110px;
+}
+.jot-add{
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+  border: solid 1px black;
+  font-weight: 900;
+  text-align: center;
+  margin: 2px;
+}
+.acct{
+  padding: 10px;
+}
+.pwd-chg{
+  margin: 5px;
+  margin-left: 100px;
+  display: block;
+}
+.sign-in
+{
+  margin: 5px;
+  margin-left: 100px;
+  display: block;
+}
+.click{
+  margin-left:100px;
+}
+
+@media (min-width: 992px) {
+  .pad{
+    width: 75%;
+    margin: 0 auto;
+    display: inline-block;
+  }
+  .sign-up{
+    display: inline;
+    margin-left:0;
+  }
+  .click{
+    margin-left:0;
+  }
+  #navbarCollapse{
+    z-index: 0;
+    position: unset;
+  }
+  .pwd-chg{
+    margin: 5px;
+    display: inline;
+  }
 }
