--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 main {
   margin: 0;
   padding: 0;
@@ -9,6 +8,7 @@ main {
 header{
   background-color: aquamarine;
   height: 90px;
+  position: sticky;
 }
 .title{
   text-align: center;
@@ -38,6 +38,14 @@ textarea{
   width: 100%;
   margin: 0 auto;
 }
+.navbar{
+  float: left;
+  z-index: 1000;
+  background: rgb(160, 160, 160);
+  position: fixed;
+  margin: 0;
+  overflow: hidden;
+}
 #navbarCollapse{
   position: fixed;
   top: 150px;
@@ -45,6 +53,8 @@ textarea{
   background: rgba(223, 223, 223, 0.9);
   margin: -6px;
   padding: 5px;
+  overflow-y: auto;
+  max-height: 400px;
 }
 .sign-up{
   display: block;
@@ -69,13 +79,7 @@ textarea{
   display: inline;
   color: black;
 }
-.navbar{
-  float: left;
-  z-index: 1000;
-  background: rgb(160, 160, 160);
-  position: fixed;
-  margin: 0;
-}
+
 .new-jot{
   width: 150px;
   margin-top: 15px;
@@ -109,7 +113,9 @@ textarea{
 .click{
   margin-left:100px;
 }
-
+.navbar-collapse{
+  align-items: initial;
+}
 @media (min-width: 992px) {
   .pad{
     width: 75%;
@@ -123,9 +129,13 @@ textarea{
   .click{
     margin-left:0;
   }
+  .collapse .navbar-collapse .show{
+    align-items: flex-start;
+  }
   #navbarCollapse{
-    z-index: 0;
-    position: unset;
+    position: relative;
+    top: 0;
+    max-height: 600px;
   }
   .pwd-chg{
     margin: 5px;
