--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ header{
 }
 .head-links{
   margin: 0 5px;
+  color: black;
 }
 .jotpad{
   padding: 10px;
@@ -83,9 +84,10 @@ textarea{
   display: block;
   width:150px;
 }
-.nav-link{
+.note-link{
   display: inline;
   color: black;
+  margin: 5px;
 }
 
 .new-jot{
